force-app/main/default/objects/FligthPreview__mdt/FligthPreview__mdt.object-meta.xml
<CustomObject>
    <label>FligthPreview</label>
    <pluralLabel>FligthPreview</pluralLabel>
</CustomObject>