force-app/main/default/objects/FligthPreview__mdt/fields/PesoBagagem__c.field-meta.xml
<CustomField>
    <fullName>PesoBagagem__c</fullName>
    <label>PesoBagagem</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>