force-app/main/default/objects/FligthPreview__mdt/fields/PesoComissario__c.field-meta.xml
<CustomField>
    <fullName>PesoComissario__c</fullName>
    <label>Peso comissário</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>