force-app/main/default/objects/FligthPreview__mdt/fields/PesoCopiloto__c.field-meta.xml
<CustomField>
    <fullName>PesoCopiloto__c</fullName>
    <label>Peso Co-piloto</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>