force-app/main/default/objects/FligthPreview__mdt/fields/PesoPassageiro__c.field-meta.xml
<CustomField>
    <fullName>PesoPassageiro__c</fullName>
    <label>Peso passageiro</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>