force-app/main/default/objects/FligthPreview__mdt/fields/PesoPiloto__c.field-meta.xml
<CustomField>
    <fullName>PesoPiloto__c</fullName>
    <label>Peso piloto</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>