force-app/main/default/objects/FligthPreview__mdt/fields/TempoAjustePadrao__c.field-meta.xml
<CustomField>
    <fullName>TempoAjustePadrao__c</fullName>
    <label>Tempo de ajuste padrao</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>