force-app/main/default/objects/FligthPreview__mdt/fields/TempoReservaPadrao__c.field-meta.xml
<CustomField>
    <fullName>TempoReservaPadrao__c</fullName>
    <label>Tempo de reserva padrão</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>